<resources>
    <string name="app_name">RailTicket</string>
    <string name="prompt_mobile_number">Mobile Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome %1$s!</string>
    <string name="invalid_username">Not a valid mobile number</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_from_city">From City</string>
    <string name="prompt_to_city">To City</string>
    <string name="prompt_journey_date">Journey Date</string>
    <string name="prompt_train_name">Train Name</string>
    <string name="label_choose_class">Choose Class</string>
    <string name="prompt_num_of_seats">Number of Seats</string>
    <string name="action_submit">Submit</string>
    <string-array name="train_classes">
        <item>AC_B</item>
        <item>AC_S</item>
        <item>SNIGDHA</item>
        <item>F_BERTH</item>
        <item>F_SEAT</item>
        <item>F_CHAIR</item>
        <item>S_CHAIR</item>
        <item>SHOVAN</item>
        <item>SHULOV</item>
        <item>AC_CHAIR</item>
    </string-array>
    <string name="passenger_details_title">Passenger Detail</string>
    <string name="passengers_details_title_plural">%d Passengers Details</string>
    <string name="passenger_header_template">Passenger %d</string>
    <string name="required_field">This field is required</string>
    <string name="error_select_gender">Please select gender for all passengers</string>
    <string name="error_fill_all_passenger_details">Please fill all details for each passenger</string>
    <string-array name="passenger_types">
        <item>Adult</item>
        <item>Child</item>
    </string-array>
    <string-array name="train_names_array">
        <item>RANGPUR EXPRESS (771)</item>
        <item>RANGPUR EXPRESS (772)</item>
        <item>PANCHAGARH EXPRESS (793)</item>
        <item>PANCHAGARH EXPRESS (794)</item>
        <item>EKOTA EXPRESS (705)</item>
        <item>EKOTA EXPRESS (706)</item>
        <item>RUPSHA EXPRESS (727)</item>
        <item>RUPSHA EXPRESS (728)</item>
        <item>DHUMKETU EXPRESS (769)</item>
        <item>DHUMKETU EXPRESS (770)</item>
        <item>SIMANTA EXPRESS (747)</item>
        <item>SIMANTA EXPRESS (748)</item>
        <item>TUNGIPARA EXPRESS (783)</item>
        <item>TUNGIPARA EXPRESS (784)</item>
        <item>PADMA EXPRESS (759)</item>
        <item>PADMA EXPRESS (760)</item>
        <item>SILKCITY EXPRESS (753)</item>
        <item>SILKCITY EXPRESS (754)</item>
        <item>SIRAJGANJ EXPRESS (775)</item>
        <item>SIRAJGANJ EXPRESS (776)</item>
        <item>LALMONI EXPRESS (751)</item>
        <item>LALMONI EXPRESS (752)</item>
        <item>KURIGRAM EXPRESS (797)</item>
        <item>MADHUMATI EXPRESS (755)</item>
        <item>KURIGRAM EXPRESS (798)</item>
        <item>MADHUMATI EXPRESS (756)</item>
        <item>BARENDRA EXPRESS (731)</item>
        <item>DRUTOJAN EXPRESS (757)</item>
        <item>DRUTOJAN EXPRESS (758)</item>
        <item>NILSAGAR EXPRESS (765)</item>
        <item>CHITRA EXPRESS (763)</item>
        <item>NILSAGAR EXPRESS (766)</item>
        <item>CHITRA EXPRESS (764)</item>
        <item>KAPOTAKSHA EXPRESS (715)</item>
        <item>KAPOTAKSHA EXPRESS (716)</item>
        <item>SUNDARBAN EXPRESS (725)</item>
        <item>SUNDARBAN EXPRESS (726)</item>
        <item>BANGLABANDHA EXPRESS (803)</item>
        <item>BANGLABANDHA EXPRESS (804)</item>
        <item>BENAPOLE EXPRESS (795)</item>
        <item>BENAPOLE EXPRESS (796)</item>
        <item>TITUMIR EXPRESS (733)</item>
        <item>TITUMIR EXPRESS (734)</item>
        <item>SAGARDARI EXPRESS (761)</item>
        <item>SAGARDARI EXPRESS (762)</item>
        <item>DHALARCHAR EXPRESS (779)</item>
        <item>DHALARCHAR EXPRESS (780)</item>
        <item>KOROTOA EXPRESS (713)</item>
        <item>KOROTOA EXPRESS (714)</item>
        <item>DOLONCHAPA EXPRESS (768)</item>
        <item>DOLONCHAPA EXPRESS (767)</item>
        <item>BANALATA EXPRESS (791)</item>
        <item>BANALATA EXPRESS (792)</item>
        <item>SONAR BANGLA EXPRESS (787)</item>
        <item>SONAR BANGLA EXPRESS (788)</item>
        <item>SUBORNO EXPRESS (701)</item>
        <item>SUBORNO EXPRESS (702)</item>
        <item>MAHANAGAR GODHULI (703)</item>
        <item>MAHANAGAR PROVATI (704)</item>
        <item>TISTA EXPRESS (707)</item>
        <item>TISTA EXPRESS (708)</item>
        <item>UPAKUL EXPRESS (711)</item>
        <item>UPAKUL EXPRESS (712)</item>
        <item>PARABAT EXPRESS (709)</item>
        <item>PARABAT EXPRESS (710)</item>
        <item>JAYENTIKA EXPRESS (717)</item>
        <item>JAYENTIKA EXPRESS (718)</item>
        <item>PAHARIKA EXPRESS (719)</item>
        <item>PAHARIKA EXPRESS (720)</item>
        <item>MOHONAGAR EXPRESS (721)</item>
        <item>MOHONAGAR EXPRESS (722)</item>
        <item>UDAYAN EXPRESS (723)</item>
        <item>UDAYAN EXPRESS (724)</item>
        <item>AGHNIBINA EXPRESS (735)</item>
        <item>AGHNIBINA EXPRESS (736)</item>
        <item>EGAROSINDHUR PROVATI (737)</item>
        <item>EGAROSINDHUR PROVATI (738)</item>
        <item>UPABAN EXPRESS (739)</item>
        <item>UPABAN EXPRESS (740)</item>
        <item>TURNA (741)</item>
        <item>TURNA (742)</item>
        <item>BHRAMMAPUTRA EXPRESS (743)</item>
        <item>BHRAMMAPUTRA EXPRESS (744)</item>
        <item>JAMUNA EXPRESS (745)</item>
        <item>JAMUNA EXPRESS (746)</item>
        <item>EGAROSINDHUR GODHULI (749)</item>
        <item>EGAROSINDHUR GODHULI (750)</item>
        <item>KALNI EXPRESS (773)</item>
        <item>KALNI EXPRESS (774)</item>
        <item>KISHORGANJ EXPRESS (781)</item>
        <item>KISHORGANJ EXPRESS (782)</item>
        <item>BIJOY EXPRESS (785)</item>
        <item>BIJOY EXPRESS (786)</item>
        <item>MOHONGANJ EXPRESS (789)</item>
        <item>MOHONGANJ EXPRESS (790)</item>
        <item>JAMALPUR EXPRESS (799)</item>
        <item>JAMALPUR EXPRESS (800)</item>
        <item>CHATTALA EXPRESS (801)</item>
        <item>CHATTALA EXPRESS (802)</item>
        <item>MEGHNA EXPRESS (729)</item>
        <item>MEGHNA EXPRESS (730)</item>
        <item>HAWR EXPRESS (777)</item>
        <item>HAWR EXPRESS (778)</item>
        <item>RAJSHAHI COMMUTER (57)</item>
        <item>RAJSHAHI COMMUTER (58)</item>
        <item>RAJSHAHI COMMUTER (77)</item>
        <item>RAJSHAHI COMMUTER (78)</item>
        <item>CHILAHATI EXPRESS (805)</item>
        <item>CHILAHATI EXPRESS (806)</item>
        <item>NARAYANGANJ COMMUTER 1 (1001)</item>
        <item>NARAYANGANJ COMMUTER 2 (1002)</item>
        <item>NARAYANGANJ COMMUTER 3 (1003)</item>
        <item>NARAYANGANJ COMMUTER 4 (1004)</item>
        <item>NARAYANGANJ COMMUTER 5 (1005)</item>
        <item>NARAYANGANJ COMMUTER 6 (1006)</item>
        <item>NARAYANGANJ COMMUTER 7 (1007)</item>
        <item>NARAYANGANJ COMMUTER 8 (1008)</item>
        <item>NARAYANGANJ COMMUTER 9 (1009)</item>
        <item>NARAYANGANJ COMMUTER 10 (1010)</item>
        <item>NARAYANGANJ COMMUTER 11 (1011)</item>
        <item>NARAYANGANJ COMMUTER 12 (1012)</item>
        <item>NARAYANGANJ COMMUTER 13 (1013)</item>
        <item>NARAYANGANJ COMMUTER 14 (1014)</item>
        <item>NARAYANGANJ COMMUTER 15 (1015)</item>
        <item>NARAYANGANJ COMMUTER 16 (1016)</item>
        <item>LALMONI COMMUTER (61)</item>
        <item>LALMONI COMMUTER (62)</item>
        <item>BURIMARI COMMUTER (65)</item>
        <item>BURIMARI COMMUTER (66)</item>
        <item>COXS BAZAR EXPRESS (813)</item>
        <item>COXS BAZAR EXPRESS (814)</item>
        <item>BURIMARI EXPRESS (809)</item>
        <item>BURIMARI EXPRESS (810)</item>
        <item>PARJOTAK EXPRESS (815)</item>
        <item>PARJOTAK EXPRESS (816)</item>
        <item>BARENDRA EXPRESS (732)</item>
        <item>KANCHON INTERCITY COMMUTER (41)</item>
        <item>KANCHON INTERCITY COMMUTER (42)</item>
        <item>JAHANABAD EXPRESS (825)</item>
        <item>JAHANABAD EXPRESS (826)</item>
        <item>RUPOSHI BANGLA EXPRESS (827)</item>
        <item>RUPOSHI BANGLA EXPRESS (828)</item>
        <item>SHAIKAT EXPRESS (821)</item>
        <item>SHAIKAT EXPRESS (824)</item>
        <item>PROBAL EXPRESS (822)</item>
        <item>PROBAL EXPRESS (823)</item>
        <item>CHAPAINAWABGANJ SHUTTLE (109)</item>
        <item>CHAPAINAWABGANJ SHUTTLE (110)</item>
        <item>DHAKA SPECIAL (10003)</item>
        <item>TOURIST SPECIAL (10002)</item>
        <item>TOURIST SPECIAL (10001)</item>
    </string-array>
</resources>